feat(skills): expand skill architecture depth and add reference docs